Fix spacing issue on forms

--- a/src/main/resources/static/css/custom.css
+++ b/src/main/resources/static/css/custom.css
@@ -65,7 +65,7 @@ h1.form-name {
 form.create,
 form.report {
     max-width: 350px;
-    padding: 10px;
+    padding: 0 10px;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -73,9 +73,7 @@ form.report {
 
 form p {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+    gap: 5px;
 }
 
 footer {
